<resources>
    <string name="app_name">תוכי שלי</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">שלום לך וברוך הבא לאפליקציית המידע על תוכים.</string>
    <string name="Training">אילוף וחינוך</string>
    <string name="Food">תזונה</string>
    <string name="Toys">צעצועים לתוכים</string>
    <string name="Food_permitted_and_forbidden">המותר והאסור</string>
    <string name="Diseases">מחלות</string>
    <string name="Veterinarian_parrots">וטרינרים לבעלי כנף</string>
    <string name="Stands">מעמדים</string>
    <string name="Feather">גזירת נוצות וציפורנייה</string>
    <string name="tree_permitted_and_forbidden">עצים - המותר והאסור</string>
    <string name="About_us">אודות האפליקציה</string>
    <string name="search_food">חפש את האוכל שאתה רוצה להאכיל בו את התוכי שלך:</string>
    <string name="search_food_icon_Ok">אייקון למותר ואסור באוכל</string>
    <string name="search_food_icon_Inf">אייקון להערות</string>
	<string name="species">זנים וסוגים שונים</string>
	<string name="toy_title"> .ראשית עליי לציין שתוכים נהנים גם כן מדברים פשוטים, כמו: לקרוע קרטון של ביצים , פקקים עם הפלסטיק ,איצטרובל, חתיכות עצים צבעוניים (לא רעילים!) וכ\'\'ו. </string>
	<string name="food_article1"> 
	    <font size="35"><b><u> \n\nתזונה נכונה לתוכים\n\n </u></b></font>
	    </string>
	<string name="food_article2">
	    
	    <u> תזונה נכונה מבטיחה חיים טובים ובריאים לתוכים שלנו. \n\n </u>
	    
	    תוכים זקוקים לתזונה נכונה ומאוזנת על מנת לשמור על בריאות טובה, מראה טוב ואריכות ימים.\n 
		תוכי שתזונתו מאוזנת ובריאה יהיה רגיש פחות למחלות שונות וסביר להניח שיאריך ימים יותר מתוכי שתזונתו לקויה.\n 
		תזונה נכונה של תוכים מורכבת ממספר דברים : כופתיות, פירות, ירקות, חלבונים, זרעים וזרעונים למינהם. \n
		חשוב להבין האם התוכי שלנו זקוק לדיאטה עשירה בפחמימות, או האם לזן התוכי שלנו נטייה להשמנת יתר כמו לאמזונות .\n 
		בהרכבת התפריט התזונתי של התוכי השפעה רבה בכל הקשור לבריאות התוכי אריכות חייו. מה מותר ומה אסור . \n\n
		
		<font size="20"><b><u> כופתיות : \n </u></b></font>
		
		כופתיות הן מרכיב טוב ומומלץ בתזונת התוכי שלנו. רצוי להרגיל תוכים לאכילת כופתיות כבר מגיל צעיר, \n
		מאחר שבגיל מאוחר יותר זה עלול להיות קשה מאוד.יש להבדיל בין כופתיות של תוכים גדולים ותוכים קטנים \n
		מאחר שהרכבם שונה. במידה והוחלט להשתמש בכופתיות על תזונת הכופתיות להוות כשליש מהתפריט היומי של התוכי \n
		כל סוגי הכופתיות מכילות ויטמינים ומינרלים בכמות מספקת הנחוצה לסוג התוכי . \n\n
		
	  </string>
	<string name="food_article3">  
	    <font size="20"><b><u> \nפירות וירקות: \n </u></b></font>
		לתוכים מותר לאכול את רוב סוגי הפירות והירקות פרט לאבוקדו (כמו כן מומלץ להמעיט במתן פרות וירקות עם רמת חומציות גבוהה) \n
		מומלץ לשלב פירות וירקות כחלק קבוע בתפריט היומי. פירות וירקות אמורים להוות כשליש בתפרטי כתוספת לכופתיות. \n\n
		
	  </string>
	<string name="food_article4">
	    <font size="20"><b><u> \nסידן וחלבונים: \n </u></b></font>
		אבן גיר או שלד דיונן (לא מומלץ לתוכים גדולים היות והם מפוררים אותו ואינם סופחים את הסידן). \n
		אצל תוכים הניזונים מכופתיות לרוב אין צורך בתוספי סידן. (מומלץ להתייעץ עם וטרינר של תוכים לגבי תוספת סידן) \n
		הבעיות מתחילות כשיש גם עודף קלציום וגם עודף ויטמין D. זה עלול לגרום נזק. \n
		לכן עדיף לא לתת תוספי ויטמינים וקלציום בכמויות לא בדוקות אלא להשתמש בכופתיות, בהן הרמות והיחסים מדודים וידועים. \n
		חשוב מאוד שרמות הסידן יהיו גבוהות יותר מרמות הפוספט במזון - הם מתחרים ביניהם על הספיגה. \n
		מכאן שתוכי שמקבל מזון מוכן - כופתיות - עם רמות הסידן הנ\'\'ל - הוא מקבל את צרכיו. ואין צורך בתוספת סידן שיכולה לגרוע . \n\n
		
	    </string>
	<string name="food_article5">
	    <font size="20"><b><u> \n .ביצה קשה לתוכים : \n </u></b></font>
		תשובתו של ד\'\'ר עדי גנץ לנושא : \n
		* לא מומלץ להזין תוכיים בשום מזון מהחי, לא בשר, לא ביצים ולא מוצרי חלב!!! \n
		* הזנת חלבון מהחי מעמיסה על הכליות שלהם וסופה שתגרום לכשל כליות ו\או שיגדון (GOUT). \n
		גם בשר וגם ביצים - ללא הבדל. \n
		* לביצים חסרון נוסף - שומן רב הגורם לשקיעת כולסטרול בעורקי הלב. גם סיכון לסלמונלה אם הבישול לא יסודי. \n
		* הרעיון שאפשר לבנות תפריט לתוכי על בסיס של מרכיבים מרובים המכילים כל אחד דברים רצויים \n
		(כמו למשל בתערובות למיניהן, \'\'סלטים\'\' וכו\') \n
		נופל תמיד בגלל שלתוכי יש העדפות משלו והוא אינו אוכל לפי התפריט שמייעדים לו. \n
		* ההמלצה המקובלת כיום :  80-90 אחוז - כופתיות, 10-20  אחוז - פירות וירקות טריים. אין צורך להוסיף לזה תוספים כלשהם, וזה אפילו עלול להזיק.\n\n 
	    
	     </string>
	<string name="food_article6">
	    <font size="20"><b><u> \n.שקדים אגוזים ובוטנים: \n </u></b></font>
		 תוכים אוהבים אותם מאוד ואין מניעה לתת אותם, אך מומלץ להגביל בכמות משום שהם מכילים אחוזי שומן גבוהים. \n
		 אפשר לתת אגוז אחת ליומיים או שלושה, הם בריאים מאוד אך כאמור - משמינים מאוד . \n\n
		
	     </string>
    <string name="food_article7">
        <font size="20"><b><u> \n .זרעים גרעינים וזרעונים: \n </u></b></font>
		ישנן תערובות שונות לסוגי תוכים שונים ומומלץ להתאים את הרכב התערובת לסוג התוכי \n
		תוכונים, קוקטילים, יכולים להתבסס על דיאטה המורכבת בעיקר מתערובות זרעונים , לאומת תוכים גדולים שרצוי מאוד \n
		לא לתת תזונה רבה שכזאת לדוגמת ג\'אקואים, ארות ואמזונות שעלולים לסבול מתת תזונה או השמנת יתר תחת דיאטה שכזו. \n
		מעבר לכך שגרעינים מכילים אחוזי שומן גבוהים הם גם מכילים הרבה מאוד זרחן, הזרחן מונע ספיגה של סידן בגוף \n
		ולכן אינו בריא לתוכי \n\n
		
	     </string>
	<string name="food_article8">
	    <font size="20"><b><u> \n.תערובת השריה / הנבטה: \n </u></b></font>
	    
		את התערובת מרככים במים לילה לפני כך הגרגירים יתרככו והתוכי יוכל ליהנות מהם . תוספת מומלצת לתזונתו של התוכי. \n
		חשוב לזכור שאין לשמור את התערובת יותר משעה אחת לאחר נתינה לתוכים , מאחר שהיא מתחילה לתסוס ולהסריח, (מחמיצה) \n\n
		
	     </string>
	<string name="food_article9">
	    <font size="20"><b><u> \n.מה לא לתת ? \n </u></b></font>
		אבוקדו ושוקולד (עשיר בקקאו) נחשבים שניהם לרעילים ויכולים לגרום למוות. \n
		עוד דברים שאינם בריאים הם אוכל מתובל שאנחנו אוכלים בבית , ונותנים לתוכים לאכול . אסור ולא רצוי . \n
		מתן עגבניה : לפי ד\'\'ר עדי גנץ זה מיתוס נחמד. \n
		החומציות של קיבת התוכי חזקה מזו של העגבניה (ה PH נמוך יותר). \n
		אבל מצד שני, אין סיבה מיוחדת לתת לתוכים עגבניות - אז אפשר לוותר על זה. \n
		אף מקרה לא תועד בספרות של הרעלה מעגבנייה אדומה \n
		לגבי עגבניות ירוקות לא רצוי לתת בכלל לתוכים . \n\n
		
	     </string>
	<string name="food_article10">
	    <font size="20"><b><u> \n.חומר למחשבה \n </u></b></font>
		שוקולד מכיל חומר שנקרא תיאוברומין והוא רעיל לתוכים, יש שתי דרכים שהתוכי יכול למות מהרעלת שוקולד: \n
		1.מנה מוגזמת של שוקולד תגרום להרעלה ולמות התוכי. \n
		2.הרעלה איטית, שנותנים לתוכי בכל פעם מנה קטנה של שוקולד ולבסוף התוכי מת. \n
		3.קפאין גורם לתוכי היפראקטיביות ומוות לאחר מתן מינון שוקולד רציף, \n
		4.משקאות אלכוהוליים יכולים להוביל לחוסר קואורדינציה ומוות. \n
		אף פעם לא צריכים להיות מותרים לציפורים או בגישה לכל המוצרים המכילים אתנול (אלכוהול). \n
		5.סוגים מסוימים של אבוקדו רעילים לציפורים. ולכן עדיף לא להאכיל אבוקדו בכלל \n
		6.צריכת יתר של מלח (נתרן כלורי) במזון בייתי יכולה לגרום לצמא מוגברת, שתייה מוגברת, הטלת שתן מוגבר, דיכאון, התרגשות נוירולוגית, רעידות, חוסר קואורדינציה ומוות של התוכי . \n
		הרבה יותר מעוניין לטעום את מה שאתה אוכל, מאחר שאתה חלק מהלהקה שלו ואנו מתפתים לתת .השתמש בשכל ישר במתן התזונה לתוכי שלך \n\n
		
		<font size="20"><b><u> * חשוב לתת לתוכי, כמו לבני אדם, מזון מגוון עשיר ונכון .ורצוי מאוד להחליף את האוכל והמים מידי יום. * \n</u></b></font>
		
		
	     </string>
	<string name="food_url">http://jakoo.co.il/cms_view_article.php?aid=264</string>
</resources>